Fixed vertical alignment of main element

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 }
 
 body {
+  height: 100vh;
   margin: 0;
   background-color: #0b2434;
-  padding-top: 80px;
   font-family: "Karla", sans-serif;
   display: flex;
   flex-direction: column;
@@ -16,9 +16,9 @@ body {
 main {
   margin: 0;
   background-color: #f5f5f5;
-  min-height: 400px;
   width: 100%;
   max-width: 500px;
+  height: auto;
   border-radius: 10px;
   padding: 40px 10px;
   display: flex;
